# tinyCNN

./: CMakeLists.txt  README.md
include/: HalideRuntime.h  Interpreter.hpp  Mat.hpp  util.h
src/: AutoStorage.h  Backend.cpp  Backend.hpp  BufferAllocator.cpp  BufferAllocator.hpp  CaffeOp.fbs  CaffeOp_generated.h  Execution.hpp  FileLoader.cpp  FileLoader.hpp  Interpreter.cpp  Mat.cpp  NoCopy.hpp  Session.hpp  layerRegister.cpp  memoryutils.cpp  memoryutils.h  tinyCNN.fbs  tinyCNN_generated.h
src/layer/: convolution.cpp  convolution.hpp  innerproduct.cpp  innerproduct.hpp  pooling.cpp  pooling.hpp  relu.cpp  relu.hpp  softmax.cpp  softmax.hpp
test/: testBackend.cpp
